--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,7 +21,7 @@ a{
     left: 0;
     right: 0;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding:0.5rem;
     background-color:var(--brand-color);
 }
@@ -30,10 +30,20 @@ a{
     list-style: none;
     display: flex;
 }
-
 .navbar-item{
     margin-left: 1rem;
     padding:.5rem;
+}
+.navbar-item:hover{
+    cursor:pointer;
+    border-radius: 10px;
+    background-color:var(--brand-color-hover);
+    transition: background var(--animation-speed);
+
+}
+
+.m-end-auto{
+    margin-left: auto;
 }
 
 /* navbar end */
@@ -72,9 +82,9 @@ a{
 }
 
 .home-social-icon i:hover{
-    transition: color var(--animation-speed);
     color: var(--brand-color);
     font-size: 2.8rem;
+    transition: color var(--animation-speed);
 
 }
 
@@ -102,12 +112,8 @@ header{
 }
 
 .header-right-body{
+    text-align:center;
     font-size: 5rem;
-}
-
-.middle-text{
-    text-decoration:underline ;
-    color: var(--secondary);
 }
 
 .header-right{
@@ -125,19 +131,57 @@ header{
     border:none;
     border-radius: 10px;
     border: 1px solid rgba(19, 99, 223,0.5);
-    background-color: white;
-}
-.hire_me:hover{
     background-color: var(--secondary);
     color: white;
-    transition: all var(--animation-speed);
+    transition: background-color var(--animation-speed);
+}
+.hire_me:hover{
+    background-color: white;
+    color: black;
+    /* transition: all var(--animation-speed); */
     cursor:pointer;
 }
 
 .developer{
     text-decoration: underline;
     color: var(--secondary);
+
 }
 /* body header main start */
 
 
+/* drop down menu */
+.dropdown-menu-hover{
+    position: relative;
+}
+
+.dropdown-menu-body{
+    width:100%;
+    list-style: none;
+    display: none;
+    padding: .3rem;
+    border-radius: 5px;
+    position:absolute; 
+    top: 100%;
+    left:0;
+    background-color:var(--brand-color);
+    font-size: 1rem;
+}
+
+.dropdown-menu-item{
+    margin-top:.3rem;
+    padding:.2rem .5rem;
+    border-bottom: 1px solid #fff;
+    border-radius:5px;
+}
+.dropdown-menu-hover:hover > ul{
+    margin-top:.1rem;
+    display: block;
+    transition: 1s;
+}
+
+.dropdown-menu-item:hover{
+    background-color:var(--brand-color-hover)
+}
+
+/* drop down menu end */
